test/bad/nullables/cmp04.px

b: Bool?
c: Char?
b is c
